Remove unnessesary db volumes, update project dependencies list

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,14 +3,16 @@ name = "productivity-tracker"
 version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
-requires-python = ">=3.9"
+requires-python = ">=3.11"
 dependencies = [
     "aiogram>=3.13.1",
-    "dependency-injector>=4.42.0",
+    "pydantic>=2.9.2",
     "pydantic-settings>=2.6.0",
-    "pytest-asyncio>=0.24.0",
     "pytest>=8.3.3",
+    "pytest-asyncio>=0.24.0",
+    "redis>=5.2.0",
     "ruff>=0.7.1",
+    "dependency-injector>=4.42.0",
 ]
 
 [tool.ruff]
