--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ dependencies = [
     "dependency-injector>=4.42.0",
     "alembic>=1.13.3",
     "aiosql>=12.2",
+    "asyncpg>=0.30.0",
 ]
 
 [tool.ruff]
