--- a/compose.yml
+++ b/compose.yml
@@ -8,6 +8,8 @@ services:
     env_file:
       - "secrets/.env.prod"
     depends_on:
+      db:
+        condition: service_healthy
       redis:
         condition: service_healthy
 
