--- a/secrets/.env.example
+++ b/secrets/.env.example
@@ -16,4 +16,4 @@ POSTGRES_PASSWORD=
 POSTGRES_DB=
 POSTGRES_HOST=
 POSTGRES_PORT=
-DB_DSN="postgresql+asyncpg://${POSTGRES_USER}:${POSTGRES_PASSWORD}@${POSTGRES_HOST}:${POSTGRES_PORT}/${POSTGRES_DB}"
+DB_DSN="postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@${POSTGRES_HOST}:${POSTGRES_PORT}/${POSTGRES_DB}"
