Prepare calendar domain mocks

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -60,4 +60,5 @@ filterwarnings = [
     "ignore::DeprecationWarning:httpx.*",
     "ignore::DeprecationWarning:passlib.*",
     "ignore::DeprecationWarning:pydantic._internal.*",
+    "ignore:Inheritance class AiohttpSession from ClientSession is discouraged:DeprecationWarning",
 ]
