Finalize calendar connection logic (#6)
* Init calendar api client

* Add new migration script for calendar tables

* Add sql queries for calendar logic

* Add calendar query builder and calendar info model

* Fix queries syntax

* Add calendar category names enum

* Update calendar api client and data models

* Update calendar models

* Update calendar data saving logic

* Add reference data loading

* Fix update category query

* Refactor unit tests structure

* Prepare calendar domain mocks

* Add messages for failure cases

* Add test for calendar category update

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ dependencies = [
     "alembic>=1.13.3",
     "aiosql>=12.2",
     "asyncpg>=0.30.0",
+    "aiogoogle>=5.13.2",
 ]
 
 [tool.ruff]
@@ -59,4 +60,5 @@ filterwarnings = [
     "ignore::DeprecationWarning:httpx.*",
     "ignore::DeprecationWarning:passlib.*",
     "ignore::DeprecationWarning:pydantic._internal.*",
+    "ignore:Inheritance class AiohttpSession from ClientSession is discouraged:DeprecationWarning",
 ]
