Replace ports with expose to close access to db from outside

--- a/compose.yml
+++ b/compose.yml
@@ -19,7 +19,7 @@ services:
     container_name: db
     volumes:
       - "db-data:/var/lib/postgresql/data"
-    ports:
+    expose:
       - 5432
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -d $${POSTGRES_DB} -U $${POSTGRES_USER}"]
@@ -33,7 +33,7 @@ services:
     image: redis:7.2.4
     hostname: redis
     container_name: redis
-    ports: 
+    expose: 
       - 6379
     command: ["/bin/sh", "-c", "redis-server --requirepass $${REDIS_PASSWORD} --save 60 1 --dir /data"]
     healthcheck:
