Init flow for parsing calendars statistics
Add google api client to access events info

Add db utils

Finalize statistics processing logic

Configure environment to run prefect flows

Restructure tests

Update job template default settings

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -15,7 +15,7 @@ repos:
     pass_filenames: false
   - id: unit_tests
     name: Unit tests
-    entry: pytest tests/unit/
+    entry: pytest tests/pt_bot/unit/ tests/tasks/unit/
     language: system
     always_run: true
     pass_filenames: false
