--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -36,4 +36,4 @@ jobs:
         printf '%s\n' "${{ vars.ENV_FILE_CONTENT }}" > secrets/.env.prod
     - name: Unit tests
       run: |
-        python -m uv run pytest tests/unit/
+        python -m uv run pytest tests/pt_bot/unit/ tests/tasks/unit/
