--- a/compose.yml
+++ b/compose.yml
@@ -12,6 +12,8 @@ services:
         condition: service_healthy
       redis:
         condition: service_healthy
+    volumes:
+      - "/var/run/docker.sock:/var/run/docker.sock"
 
   db:
     image: postgres:16.1-alpine
