--- a/prefect.yaml
+++ b/prefect.yaml
@@ -4,10 +4,16 @@
 
 # Generic metadata about this project
 name: pt
-prefect-version: 2.16.6
+prefect-version: 3.1.0
 
 # build section allows you to manage and build docker images
-build: null
+build:
+- prefect_docker.deployments.steps.build_docker_image:
+    id: build-image
+    requires: prefect-docker<0.7
+    image_name: "pt-flow-image"
+    dockerfile: /app/tasks/Dockerfile
+    tag: latest
 
 # push section allows you to manage if and how this project is uploaded to remote locations
 push: null
@@ -18,4 +24,16 @@ pull:
     directory: /app
 
 # the deployments section allows you to provide configuration for deploying flows
-deployments: null
+deployments:
+- name: parse_calendars_statistics
+  version: null
+  tags: []
+  description: null
+  entrypoint: tasks.calendars_statistics:parse_calendars_statistics
+  parameters: {}
+  work_pool:
+    name: MainPool
+    work_queue_name: null
+    job_variables: {
+      image: pt-flow-image:latest
+    }
