--- a/secrets/.env.example
+++ b/secrets/.env.example
@@ -21,4 +21,5 @@ DB_DSN="postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@${POSTGRES_HOST}:${PO
 # Prefect
 PREFECT_SERVER_API_HOST=0.0.0.0
 PREFECT_API_URL=http://prefect-server:4200/api
+PREFECT_UI_API_URL=http://0.0.0.0:4200/api
 PREFECT_API_DATABASE_CONNECTION_URL="postgresql+asyncpg://${POSTGRES_USER}:${POSTGRES_PASSWORD}@${POSTGRES_HOST}:${POSTGRES_PORT}/${POSTGRES_DB}"
