--- a/tasks/Dockerfile
+++ b/tasks/Dockerfile
@@ -2,8 +2,8 @@ ARG PYTHON_VERSION=3.11
 FROM python:${PYTHON_VERSION}-slim as base
 
 ENV PYTHONDONTWRITEBYTECODE=1
-
 ENV PYTHONUNBUFFERED=1
+ENV PATH=$PATH:/app/.venv/bin
 
 WORKDIR /app
 
@@ -13,5 +13,5 @@ COPY pyproject.toml .
 RUN python -m pip install uv
 RUN python -m uv sync --frozen
 
-COPY tasks/ .
-COPY secrets/ .
+COPY tasks /app/tasks
+COPY secrets /app/secrets
