--- a/secrets/.env.example
+++ b/secrets/.env.example
@@ -23,3 +23,4 @@ PREFECT_SERVER_API_HOST=0.0.0.0
 PREFECT_API_URL=http://prefect-server:4200/api
 PREFECT_UI_API_URL=http://0.0.0.0:4200/api
 PREFECT_API_DATABASE_CONNECTION_URL="postgresql+asyncpg://${POSTGRES_USER}:${POSTGRES_PASSWORD}@${POSTGRES_HOST}:${POSTGRES_PORT}/${POSTGRES_DB}"
+PREFECT_DEFAULT_WORK_POOL_NAME=MainPool
