--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ dependencies = [
     "aiogoogle>=5.13.2",
     "prefect>=3.1.0",
     "prefect-docker>=0.6.1",
+    "freezegun>=1.5.1",
 ]
 
 [tool.ruff]
