--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ dependencies = [
     "prefect-docker>=0.6.1",
     "freezegun>=1.5.1",
     "pygal>=3.0.5",
+    "jinja2>=3.1.4",
 ]
 
 [tool.ruff]
