--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,8 @@ dependencies = [
     "prefect>=3.1.0",
     "prefect-docker>=0.6.1",
     "freezegun>=1.5.1",
+    "pygal>=3.0.5",
+    "jinja2>=3.1.4",
 ]
 
 [tool.ruff]
